[gd_scene load_steps=17 format=2]

[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Enemies/TentacleGuy/TentacleDead.gd" type="Script" id=2]
[ext_resource path="res://Enemies/TentacleGuy/TentacleGuy.gd" type="Script" id=3]
[ext_resource path="res://Art/TentacleGuy.png" type="Texture" id=4]
[ext_resource path="res://GameNodes/Hurtboxes/EnemyHurtbox.gd" type="Script" id=5]
[ext_resource path="res://Enemies/TentacleGuy/TentacleChase.gd" type="Script" id=6]
[ext_resource path="res://GameNodes/FCTManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/TentacleGuy/TentacleKnockback.gd" type="Script" id=8]
[ext_resource path="res://GameNodes/UnitSprite.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameNodes/XP.tscn" type="PackedScene" id=10]
[ext_resource path="res://Weapons/DOTFire.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape2D" id=11]
radius = 6.0
height = 0.0

[sub_resource type="Animation" id=8]
resource_name = "Chase"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UnitSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "Knockback"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4 ]
}

[sub_resource type="CapsuleShape2D" id=14]
radius = 7.0
height = 6.0

[node name="TentacleGuyWalker" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 10
script = ExtResource( 3 )
dot_scene = ExtResource( 11 )
xp = ExtResource( 10 )
health = 25
move_speed = 45.0

[node name="UnitSprite" parent="." instance=ExtResource( 9 )]
texture = ExtResource( 4 )
hframes = 56
frame = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Chase = SubResource( 8 )
anims/Die = SubResource( 3 )
anims/Knockback = SubResource( 13 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Chase")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Knockback" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StateMachine/Knockback"]
wait_time = 0.1
one_shot = true

[node name="FCTManager" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -16 )

[node name="EnemyHurtbox" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2( 0, -2 )
shape = SubResource( 14 )

[connection signal="timeout" from="StateMachine/Knockback/Timer" to="StateMachine/Knockback" method="_on_Timer_timeout"]
[connection signal="damage_over_time" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_damage_over_time"]
[connection signal="damage_taken" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_damage_taken"]
[connection signal="hurtbox_hit" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_hurtbox_hit"]
